<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">验证码助手</string>
    <string name="user_name">用户名</string>
    <string name="bmob_app">1c41b419c417a6e3b39b04704243c795</string>
    <string name="user_pwd">密&#160;&#160;&#160;&#160;码</string>

    <string name="login">登&#160;&#160;&#160;&#160;录</string>
    <string name="no_register">还没有帐号，去&#160;&#160;注册</string>
    <string name="input_pwd">请输入密码</string>

    <string name="string_copied">已复制</string>
    <string name="register">注册</string>

    <string name="tab_one">接&#160;码</string>
    <string name="tab_three">我&#160;的</string>
    <string name="verify_code">验证码：</string>
    <string name="search_result">搜索到&#160;%d&#160;个项目：</string>
    <string name="recharge_desc_1">第一步：使用支付宝转账给 a1221331441@163.com 梁程涵</string>
    <string name="recharge_desc_2">最低充值金额1元,充值立即到账(请用多少充多少, 用不完的余额没有特殊原因不能退款)</string>
    <string name="recharge_desc_3">第二步：成功之后会生成一个订单号，复制这个订单号到上面的订单号框内点击提交\n举例：20180825200040011100670054187161（长度是28位或32位请仔细核对输入）</string>
    <string name="recharge_desc_4">第三步：提交成功后一分钟内就会充值成功，进入“我的”&#8212;&#8212;“账户信息”查看</string>

    <string name="wait_msg_desc">请复制手机号到您的项目中，并获取验证码。10秒钟后开始查收验证码&#8230;</string>
    <string name="wait_for_msg">等待短信中&#8230;</string>
    <string name="user_info">账号信息</string>

    <string name="privacy_policy">隐私协议</string>
    <string name="about_us_check_for_update">检测升级</string>
    <string name="upgrade_desc">有新版本：\n%s</string>
    <string name="sms_history" >接码记录</string>
    <string name="history_phone" >号码：%s</string>


</resources>
