<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <ImageView
        android:id="@+id/login_close_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/login_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_white_corner"
        android:divider="@drawable/shape_divide_gray"
        android:minHeight="60dp"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/login_pwd_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/gray_tab"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_name_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:cursorVisible="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_white_corner"
        android:divider="@drawable/shape_divide_gray"
        android:minHeight="60dp"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:showDividers="middle"
        app:layout_constraintBottom_toTopOf="@+id/login_submit_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_name_layout">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/user_pwd"
            android:textColor="@color/gray_tab"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_pwd_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:cursorVisible="true"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_submit_tv"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@drawable/selector_recommend"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/gray_tab"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_register_tv"
        app:layout_constraintTop_toBottomOf="@+id/login_pwd_layout" />

    <TextView
        android:id="@+id/login_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_register"
        android:textColor="@color/gray_tab"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_submit_tv"

        />

</android.support.constraint.ConstraintLayout>
